--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -50,7 +50,7 @@ jobs:
         # Add command to install dependencies
         run: |
           echo "Installing dependencies..."
-          pip install -r requirements.txt  # Install project dependencies
+          pip install -r ./backend/requirements.txt  # Install project dependencies
 
   # TODO: Define a job for building and pushing Docker images
   # docker:
