--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -24,9 +24,12 @@ jobs:
       
       # TODO: Install dependencies
       - name: Install dependencies
+        working-directory: ./frontend
         run: npm install
+        
       # TODO: Run tests
       - name: Run tests
+        working-directory: ./frontend
         run: npm run test
         
       # TODO: Build the React app
