--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -30,7 +30,7 @@ jobs:
       # TODO: Run tests
       - name: Run tests
         working-directory: ./frontend
-        run: npm run test -- --watchAll=false
+        run: npm run test -- --detectOpenHandles
         
       # TODO: Build the React app
       - name: Build the React App
