--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -35,6 +35,7 @@ jobs:
         
       # TODO: Build the React app
       - name: Build the React App
+        working-directory: ./frontend
         run: npm run build
 
   # TODO: Define a job for building and testing the backend
