--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,9 +5,10 @@ version: "3"
 services:
   frontend:
     # Specify the build context for the frontend
-    build:  
+    build: .
     # Map the host port to the container port
     ports:
+     - "3000:3000"
     # Specify dependencies (if applicable)
     depends_on:
 
