--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -29,9 +29,9 @@ jobs:
 
         
       # TODO: Run tests
-      - name: Run tests
-        working-directory: ./frontend
-        run: npm run test 
+      # - name: Run tests
+      #   working-directory: ./frontend
+      #   run: npm run test 
         
       # TODO: Build the React app
       - name: Build the React App
@@ -74,6 +74,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       # TODO: Build frontend Docker image
+      - name: Build frontend Docker image
+        run: |
+          docker build -t tataothow101/frontend:${{ github.sha }} ./frontend
+      # TODO: Push images to Docker Hub (if on main branch)
+      - name: Push frontend Docker image
+        if: github.ref == 'refs/heads/main'
+        run: |
+          docker push tataothow101/frontend:${{ github.sha }}
+
       # TODO: Build backend Docker image
       - name: Build backend Docker image
         run: |
