--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -60,7 +60,7 @@ jobs:
   # TODO: Define a job for building and pushing Docker images
   docker:
     # Run this job only when 'frontend' & 'backend' stages are sucessfully completed
-    needs: [backend]
+    needs: [frontend,backend]
     runs-on: ubuntu-latest
     steps:
       # TODO: Checkout code
