--- a/frontend/Hint/Dockerfile
+++ b/frontend/Hint/Dockerfile
@@ -1,26 +1,20 @@
 # Use an official Node runtime as a parent image
-FROM
-
+FROM node:14-alpine
 # Set the working directory in the container
-WORKDIR
-
+WORKDIR /frontend
 # Copy package.json and package-lock.json
-COPY
-
+COPY  package.json  package-lock.json .
 # Install app dependencies
-RUN
-
+RUN npm install 
 # Copy the current directory contents into the container
-COPY
-
+COPY . .
 # Build the app
-RUN
-
+RUN npm start
 # Make port 3000 available to the world outside this container
-EXPOSE
+EXPOSE 3000
 
 # Define environment variable
-ENV
+ENV PORT=3000
 
 # Run the app when the container launches
-CMD
+CMD  ["npm", "start"]
