--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -74,15 +74,22 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       # TODO: Build frontend Docker image
-      
-      - name: Build frontend Docker image
+      - name: Build Docker Image
         run: |
-          docker build  -t tataothow101/frontend:${{ github.sha }} ./frontend
-      # TODO: Push images to Docker Hub (if on main branch)
-      - name: Push frontend Docker image
+          docker build -t tataothow101/frontend:${{ github.sha }} ./frontend
+
+      - name: Push Docker Image
         if: github.ref == 'refs/heads/main'
         run: |
           docker push tataothow101/frontend:${{ github.sha }}
+      # - name: Build frontend Docker image
+      #   run: |
+      #     docker build  -t tataothow101/frontend:${{ github.sha }} ./frontend
+      # # TODO: Push images to Docker Hub (if on main branch)
+      # - name: Push frontend Docker image
+      #   if: github.ref == 'refs/heads/main'
+      #   run: |
+      #     docker push tataothow101/frontend:${{ github.sha }}
      
       
 
